Switch to my fork of micropython / PullRequest 5964

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,5 +4,5 @@
 	branch = master
 [submodule "micropython"]
 	path = micropython
-	url = https://github.com/micropython/micropython
-	branch = master
+	url = https://github.com/fnordsh/micropython.git
+	branch = pr5964-dmpy
